<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/targetImg"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        android:background="#3F51B5"
        android:contentDescription="@string/app_name"
        android:src="@drawable/android_face"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07999998" />


    <Button
        android:id="@+id/blinkAniBtn"
        style="@style/TextAppearance.AppCompat.Widget.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:padding="3dp"
        android:text="@string/blink"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/brightenBtn"
        app:layout_constraintVertical_bias="0.0" />


    <Button
        android:id="@+id/rotateAniBtn"
        style="@style/TextAppearance.AppCompat.Widget.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:padding="3dp"
        android:text="@string/rotate"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBaseline_toBaselineOf="@+id/moveAniBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toEndOf="@+id/moveAniBtn" />

    <!--To start the slide animation of the image-->

    <Button
        android:id="@+id/fadeAniBtn"
        style="@style/TextAppearance.AppCompat.Widget.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:padding="3dp"
        android:text="@string/fade"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBaseline_toBaselineOf="@+id/blinkAniBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toEndOf="@+id/blinkAniBtn" />

    <Button
        android:id="@+id/moveAniBtn"
        style="@style/TextAppearance.AppCompat.Widget.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:padding="3dp"
        android:text="@string/move"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.031"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/targetImg"
        app:layout_constraintVertical_bias="0.120000005" />

    <Button
        android:id="@+id/slideAniBtn"
        style="@style/TextAppearance.AppCompat.Widget.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:padding="3dp"
        android:text="@string/slide"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBaseline_toBaselineOf="@+id/blinkAniBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/fadeAniBtn" />

    <Button
        android:id="@+id/resetBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fadeAniBtn"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/expandAniBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/expand"
        app:layout_constraintBaseline_toBaselineOf="@+id/moveAniBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/rotateAniBtn" />

    <Button
        android:id="@+id/brightenBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/brighten"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/moveAniBtn"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/darkenBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/darken"
        app:layout_constraintBaseline_toBaselineOf="@+id/brightenBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toEndOf="@+id/brightenBtn" />

    <Button
        android:id="@+id/grayscaleBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginEnd="16dp"
        android:text="@string/grayscale"
        app:layout_constraintBaseline_toBaselineOf="@+id/darkenBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/darkenBtn" />
</androidx.constraintlayout.widget.ConstraintLayout>